[package]
name = "asciivision-wasm"
version = "0.1.0"
edition = "2021"
description = "Real-time ASCII camera viewer in WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
